<resources>
    <string name="app_name">SUNMI Assistant</string>
    <string name="str_text_lead_remote">Remote Management</string>
    <string name="str_text_lead_query_status">Check the status of your store anywhere anytime</string>
    <string name="str_text_lead_tem">Terminal Management</string>
    <string name="str_text_lead_set_perm">Accurately identify the key terminals, set up the internet access permission easily</string>
    <string name="str_text_lead_service">The core business can work properly even during network congestion</string>
    <string name="str_text_lead_search_dev">Search Sunmi Devices</string>
    <string name="str_text_lead_set_connected">One-Key to connect the Sunmi devices to the internet, fast and safe</string>
    <string name="tip_old_and_new_psw_same">The old and new password cannot be the same</string>
    <string name="str_sunmi_copyright_sound">©2019 Shanghai Sunmi Technology Co., Ltd. All Rights Reserved.</string>
    <string name="str_open_permission_to_update">Enable the permission to unknown source, so as to update the APP</string>
    <string name="str_no_sd">No SD card found in this device！</string>
    <string name="dialog_msg_merge">You have registered multiple accounts in different Sunmi platforms, for the safety of your accounts, need to merge your accounts. Click OK to merge.</string>
    <string name="str_please_open_sd">Please allow to operate the SD Card！！</string>
    <string name="str_password_no_contains_blank">Not allow any blank space in a password</string>
    <string name="str_password_fomat_error">Password format error</string>
    <string name="tip_support_multi_select">Multiple devices can be selected</string>
    <string name="tip_title_choose_device">Select the devices you want to connect</string>
    <string name="tip_keep_device_in">Make sure your device is within the router signal range</string>
    <string name="str_auth_onclick_protocol">Click the button to agree</string>
    <string name="str_auth_protocol_text">License agreement</string>
    <string name="str_select_store">Select a Store</string>
    <string name="str_my_store">My store</string>
    <string name="btn_add_store">Add store</string>
    <string name="str_store_info">Store Information</string>
    <string name="str_order_management">Order Management</string>
    <string name="str_tab_dashboard">Data</string>
    <string name="str_help_feedback">Help and feedback</string>
    <string name="str_me">me</string>
    <string name="str_edit_store_name">Edit store name</string>
    <string name="str_choose_please">Please choose</string>
    <string name="str_selected">Please select</string>
    <string name="tip_addr_empty">Please enter the detailed address</string>
    <string name="dashboard_title_customer_trend">Passenger flow trend</string>
    <string name="dashboard_title_data_trend">数据趋势</string>
    <string name="dashboard_title_enter_rate">Entering Rate</string>
    <string name="dashboard_title_customer_analysis">Passenger flow analysis</string>
    <string name="dashboard_title_main_customer">主力客群</string>
    <string name="dashboard_title_frequency_trend_week">Trends in frequency of visits (Week)</string>
    <string name="dashboard_title_frequency_trend_month">Trends in frequency of visits (Month</string>
    <string name="dashboard_title_frequency_avg">Average frequency of store visits</string>
    <string name="dashboard_var_all">All</string>
    <string name="dashboard_time_today">Today</string>
    <string name="dashboard_time_this_week">Week</string>
    <string name="dashboard_time_this_month">Month</string>
    <string name="dashboard_time_day">日</string>
    <string name="dashboard_time_week">周</string>
    <string name="dashboard_time_month">月</string>
    <string name="dashboard_time_yesterday">Yesterday</string>
    <string name="dashboard_time_last_day">Last Day</string>
    <string name="dashboard_time_last_week">Last Week</string>
    <string name="dashboard_time_last_month">Last Month</string>
    <string name="dashboard_time_before_day">较前一日</string>
    <string name="dashboard_time_before_week">较前一周</string>
    <string name="dashboard_time_before_month">较前一月</string>
    <string name="dashboard_var_time">Time</string>
    <string name="dashboard_var_total_sales_amount">Total Sales</string>
    <string name="dashboard_var_customer">Customer Visits</string>
    <string name="dashboard_var_transaction_rate">Conversion Rate</string>
    <string name="dashboard_var_customer_total">总客流量</string>
    <string name="dashboard_var_sales_volume_total">总交易笔数</string>
    <string name="dashboard_shop_menu_tip">以下是本企业的各个子门店</string>
    <string name="dashboard_page_realtime_data">Monitor</string>
    <string name="dashboard_page_customer">Traffic Analysis</string>
    <string name="dashboard_page_profile">Persona</string>
    <string name="dashboard_page_realtime_today">今日实时</string>
    <string name="dashboard_var_customer_pass">Passing Customers</string>
    <string name="dashboard_var_customer_all">All the Customers</string>
    <string name="dashboard_tip_profile_analysis">基于人脸采集数据，按照客流占比排列</string>
    <string name="dashboard_var_customer_count">Customer Visits</string>
    <string name="dashboard_var_customer_total_ratio">Of the Total</string>
    <string name="dashboard_var_customer_old_ratio">Repeat</string>
    <string name="dashboard_var_frequency">Frequency</string>
    <string name="dashboard_unit_frequency_data_day">%s/Day</string>
    <string name="dashboard_unit_frequency_data_week">%s/Week</string>
    <string name="dashboard_unit_frequency_data_month">%s/Month</string>
    <string name="dashboard_var_customer_count2">The number of visitors</string>
    <string name="dashboard_unit_frequency_count">Times %d</string>
    <string name="dashboard_unit_frequency_count_above">Times More than %d times</string>
    <string name="dashboard_unit_time_pattern_day">yyyy年MM月dd日</string>
    <string name="dashboard_unit_time_pattern_week">%4d年第%2d周</string>
    <string name="dashboard_unit_time_pattern_month">yyyy年MM月</string>
    <string name="dashboard_time_week_1">1st Week</string>
    <string name="dashboard_time_week_2">2nd Week</string>
    <string name="dashboard_time_week_3">3rd Week</string>
    <string name="dashboard_time_week_4">4th Week</string>
    <string name="dashboard_time_week_5">5th Week</string>
    <string name="dashboard_time_week_6">6th Week</string>
    <string name="dashboard_title_performance">业绩排行</string>
    <string name="dashboard_btn_get_more">查看更多数据</string>
    <string name="dashboard_title_frequency">Customer visits frequency</string>
    <string name="dashboard_tip_customer_avg_enter">The average number of customer visits to the store over a period of time</string>
    <string name="dashboard_title_frequency_distribution">Store visits</string>
    <string name="dashboard_unit_frequency_count_above_abbr">Above %d</string>
    <string name="dashboard_title_business_trend">Business Trends</string>
    <string name="dashboard_var_transaction_rate_abbr">Conversion Rate</string>
    <string name="dashboard_var_sales_volume">Transactions</string>
    <string name="dashboard_var_sales_amount">销售额</string>
    <string name="dashboard_var_customer_volume">Customer Visits</string>
    <string name="dashboard_title_distribution">Customer Distribution</string>
    <string name="dashboard_var_new_old">New/Repeat</string>
    <string name="dashboard_var_customer_new">New</string>
    <string name="dashboard_var_customer_old">Repeat</string>
    <string name="dashboard_var_customer_unknown">未识别</string>
    <string name="dashboard_var_gender">Gender</string>
    <string name="dashboard_var_male">Male</string>
    <string name="dashboard_var_female">Female</string>
    <string name="dashboard_var_old_count">熟客人数</string>
    <string name="dashboard_var_new_count">新客人数</string>
    <string name="dashboard_var_male_count">男性人数</string>
    <string name="dashboard_var_female_count">女性人数</string>
    <string name="dashboard_unit_age"> </string>
    <string name="dashboard_tip_customer_none">No data</string>
    <string name="dashboard_title_import_saas">Import history order</string>
    <string name="dashboard_tip_import_saas">支持%s前2个月的订单</string>
    <string name="dashboard_tip_importing">History order is being imported, it will take about 5-10 minutes</string>
    <string name="dashboard_tip_import_ok">Import successful, you can view the data in order analysis</string>
    <string name="dashboard_tip_import_error">Data import failed, please try again.</string>
    <string name="dashboard_btn_import">Import</string>
    <string name="dashboard_tip_no_data">No data, you can try:</string>
    <string name="dashboard_tip_no_fs_title">Add Face Sense Camera</string>
    <string name="dashboard_tip_no_fs_content">Statistics real-time passenger flow, customer group analysis</string>
    <string name="dashboard_btn_add">Add</string>
    <string name="dashboard_btn_add_device">Add Device</string>
    <string name="dashboard_tip_no_order_title">Access to store system</string>
    <string name="dashboard_tip_no_order_content">Display store operation dynamic, provide multidimensional management analysis</string>
    <string name="dashboard_btn_no_order_dock">Access</string>
    <string name="dashboard_tip_no_customer_title">No data，you can try：</string>
    <string name="dashboard_tip_no_customer_wait">Data will be updated from 1:00 to 2:00 the next day</string>
    <string name="dashboard_tip_no_fs_floating">The camera is untethered</string>
    <string name="dashboard_tip_customer_distribution">基于人脸采集数据</string>
    <string name="dashboard_tip_total_no_saas">请前往子门店添加AI识客摄像机并导入软件订单数据即可查看总部数据</string>
    <string name="dashboard_tip_total_no_fs">请前往子门店添加AI识客摄像机即可查看总部数据</string>
    <string name="dashboard_tip_subpage">若要查看更详细指标，则会跳转至对应门店。此后您仍可以通过下拉的方式回到总部。</string>
    <string name="dashboard_tip_no_shop">您尚不具备该门店的查看权限，请联系管理员开通后即可查看。</string>
    <string name="str_platform_list">Platform list</string>
    <string name="str_platform_skip">Skip</string>
    <string name="str_button_check">Verification</string>
    <string name="str_get_sms_code">Get verification code</string>
    <string name="str_please_input_sms_code">Please enter the verification code</string>
    <string name="str_sms_code">Verification code</string>
    <string name="str_please_input_mobile">Please enter the phone number</string>
    <string name="str_mobile">Phone number</string>
    <string name="company_create">Create new company</string>
    <string name="company_new_create">Create new company</string>
    <string name="company_new_try_create">You can create a new company</string>
    <string name="company_shop_contact">Contact person</string>
    <string name="company_shop_mobile">Contact information</string>
    <string name="company_name">Company Name</string>
    <string name="company_id">Company ID</string>
    <string name="company_create_time">Creation time</string>
    <string name="company_switch">Switch company</string>
    <string name="company_email">Contact email</string>
    <string name="company_show_now">Current company</string>
    <string name="company_shop_details">Detail</string>
    <string name="company_shop_face_group">Face group</string>
    <string name="str_msg_setting">Notification Settings</string>
    <string name="str_task_msg">Task</string>
    <string name="str_service_msg">Service Message</string>
    <string name="str_promotion_msg">Promoting Message</string>
    <string name="str_device_setting">Device Settings</string>
    <string name="str_system_setting">System Settings</string>
    <string name="company_shop_into_log">Into log</string>
    <string name="pos_guarantee_details">Guarantee details</string>
    <string name="pos_guarantee_status">Guarantee status</string>
    <string name="pos_activited_time">Activated time</string>
    <string name="pos_expire_time">Expire time</string>
</resources>