<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/str_store_info"
        app:titleTextColor="@color/text_main" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_shop_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        app:showDivider="top"
        app:title="@string/company_shop_details"
        app:type="arrow" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_shop_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:showDivider="top"
        app:title="@string/company_shop_face_group"
        app:type="arrow" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_shop_history_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:visibility="gone"
        app:showDivider="top"
        app:title="@string/company_shop_into_log"
        app:type="arrow" />

</LinearLayout>