<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_2"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/str_msg_setting"
        app:titleTextColor="@color/text_main" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_25"
                android:gravity="center_vertical"
                android:text="@string/str_device_setting"
                android:textColor="@color/text_caption"
                android:textSize="@dimen/sp_14" />

            <sunmi.common.view.SmRecyclerView
                android:id="@+id/rv_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/c_white"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_25"
                android:gravity="center_vertical"
                android:text="@string/str_system_setting"
                android:textColor="@color/text_caption"
                android:textSize="@dimen/sp_14" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/switch_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="true"
                app:showDivider="top"
                app:title="@string/str_task_msg"
                app:type="toggle" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/switch_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="true"
                app:showDivider="top"
                app:title="@string/str_service_msg"
                app:type="toggle" />

            <sunmi.common.view.SettingItemLayout
                android:id="@+id/switch_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checked="true"
                app:showDivider="top"
                app:title="@string/str_promotion_msg"
                app:type="toggle" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <include
        android:id="@+id/layout_network_error"
        layout="@layout/include_network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>