<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText_5"
    android:orientation="vertical">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/company_show_now"
        app:titleTextColor="@color/colorText" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        app:leftPadding="@dimen/dp_10"
        app:leftText="@string/company_name"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20"
        app:rightTextColor="@color/colorText_60" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_company_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:layout_constraintTop_toBottomOf="@id/sil_company_name"
        app:leftPadding="@dimen/dp_10"
        app:leftText="@string/company_id"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20"
        app:rightTextColor="@color/colorText_60" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_company_create_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:layout_constraintTop_toBottomOf="@id/sil_company_id"
        app:leftPadding="@dimen/dp_10"
        app:leftText="@string/company_create_time"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20"
        app:rightTextColor="@color/colorText_60" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_company_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:layout_constraintTop_toBottomOf="@id/sil_company_create_time"
        app:leftPadding="@dimen/dp_10"
        app:leftText="@string/company_shop_contact"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20"
        app:rightTextColor="@color/colorText_60" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_company_contact_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        android:visibility="gone"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:layout_constraintTop_toBottomOf="@id/sil_company_contact"
        app:leftPadding="@dimen/dp_10"
        app:leftText="@string/company_shop_mobile"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20"
        app:rightTextColor="@color/colorText_60" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_company_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_0_5"
        android:background="@color/c_white"
        app:imageRight="@mipmap/ic_right_arrow_small"
        app:layout_constraintTop_toBottomOf="@id/sil_company_contact_tel"
        app:leftPadding="@dimen/dp_10"
        app:leftText="@string/company_email"
        app:parentHeight="@dimen/dp_60"
        app:rightPadding="@dimen/dp_20"
        app:rightTextColor="@color/colorText_60" />


    <RelativeLayout
        android:id="@+id/rl_company_switch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/c_white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_60"
            android:background="@color/c_white"
            android:drawableStart="@mipmap/ic_company_switch"
            android:gravity="center"
            android:text="@string/company_switch"
            android:textColor="@color/colorText_60"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>