<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common">

    <sunmi.common.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/c_white"
        app:dividerShow="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftDefaultClickEnable="true"
        app:leftIcon="@drawable/ic_back_dark"
        app:titleText="@string/pos_guarantee_details"
        app:titleTextColor="@color/text_main" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentText="--"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        app:showDivider="bottom"
        app:title="@string/pos_guarantee_status" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_activated_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentText="--"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sil_status"
        app:showDivider="bottom"
        app:title="@string/pos_activited_time" />

    <sunmi.common.view.SettingItemLayout
        android:id="@+id/sil_expire_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentText="--"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sil_activated_time"
        app:showDivider="bottom"
        app:title="@string/pos_expire_time" />

</android.support.constraint.ConstraintLayout>