<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_gray_radius">

    <TextView
        android:id="@+id/tv_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/dashboard_title_distribution"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dashboard_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/dashboard_tip_customer_distribution"
        android:textColor="@color/text_caption"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_title" />

    <TextView
        android:id="@+id/tv_dashboard_new_old"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_12"
        android:gravity="center"
        android:text="@string/dashboard_var_new_old"
        android:textColor="@color/dashboard_btn_chart_text"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_dashboard_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_dashboard_gender" />

    <TextView
        android:id="@+id/tv_dashboard_gender"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_12"
        android:gravity="center"
        android:text="@string/dashboard_var_gender"
        android:textColor="@color/dashboard_btn_chart_text"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_dashboard_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_dashboard_age" />

    <TextView
        android:id="@+id/tv_dashboard_age"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/str_common_age"
        android:textColor="@color/dashboard_btn_chart_text"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_dashboard_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/view_dashboard_pie_chart"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_24"
        app:layout_constraintBottom_toTopOf="@+id/btn_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_tip" />

    <Button
        android:id="@+id/btn_more"
        style="@style/BtnMediumWhite"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/dashboard_btn_get_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_dashboard_pie_chart" />

</android.support.constraint.ConstraintLayout>