<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_fill">

    <TextView
        android:id="@+id/tv_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/dashboard_title_performance"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dashboard_customer"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_12"
        android:gravity="center"
        android:text="@string/dashboard_var_customer_volume"
        android:textColor="@color/dashboard_btn_chart_text"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_dashboard_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_dashboard_sales"
        app:layout_goneMarginEnd="@dimen/dp_24" />

    <TextView
        android:id="@+id/tv_dashboard_sales"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_24"
        android:gravity="center"
        android:text="@string/dashboard_var_sales_amount"
        android:textColor="@color/dashboard_btn_chart_text"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_dashboard_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <sunmi.common.view.NestedListView
        android:id="@+id/lv_dashboard_list"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_title" />

    <Button
        android:id="@+id/btn_more"
        app:layout_constraintTop_toBottomOf="@id/lv_dashboard_list"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dashboard_btn_get_more"
        style="@style/BtnMediumWhite" />

</android.support.constraint.ConstraintLayout>